feat: endpoints social :alert swgger comments
